@@ -70,7 +70,9 @@ typedef int CFHTTPCookieStorageAcceptPolicy;
 typedef struct OpaqueCFHTTPCookieStorage* CFHTTPCookieStorageRef;
 #endif
 
-#if USE(CFURLSTORAGESESSIONS)
+#if USE(CFURLSTORAGESESSIONS) && defined(BUILDING_ON_SNOW_LEOPARD)
+typedef struct __CFURLStorageSession* CFURLStorageSessionRef;
+#elif USE(CFURLSTORAGESESSIONS)
 typedef const struct __CFURLStorageSession* CFURLStorageSessionRef;
 #endif
 
