@@ -40,7 +40,9 @@ class NSURLRequest;
 #endif
 #endif
 
-#if USE(CFURLSTORAGESESSIONS)
+#if USE(CFURLSTORAGESESSIONS) && defined(BUILDING_ON_SNOW_LEOPARD)
+typedef struct __CFURLStorageSession* CFURLStorageSessionRef;
+#elif USE(CFURLSTORAGESESSIONS)
 typedef const struct __CFURLStorageSession* CFURLStorageSessionRef;
 #endif
 
