@@ -1,3 +1,12 @@
+2011-06-07  Tim Horton  <timothy_horton@apple.com>
+
+        Reviewed by Alexey Proskuryakov.
+
+        Use correct CFURLStorageSessionRef definition on Snow Leopard
+        https://bugs.webkit.org/show_bug.cgi?id=62223
+
+        * PluginProcess/mac/PluginProcessShim.mm:
+
 2011-06-07  John Sullivan  <sullivan@apple.com>
 
         Reviewed by Darin Adler.
