@@ -1,3 +1,12 @@
+2011-06-07  Tim Horton  <timothy_horton@apple.com>
+
+        Reviewed by Alexey Proskuryakov.
+
+        Use correct CFURLStorageSessionRef definition on Snow Leopard
+        https://bugs.webkit.org/show_bug.cgi?id=62223
+
+        * WebKitSystemInterface.h:
+
 2011-06-06  Alexandru Chiculita  <achicu@adobe.com>
 
         Reviewed by Kent Tamura.
