@@ -1,3 +1,14 @@
+2011-06-07  Tim Horton  <timothy_horton@apple.com>
+
+        Reviewed by Alexey Proskuryakov.
+
+        Use correct CFURLStorageSessionRef definition on Snow Leopard
+        https://bugs.webkit.org/show_bug.cgi?id=62223
+
+        * platform/mac/WebCoreSystemInterface.h:
+        * platform/network/ResourceHandle.h:
+        * platform/network/cf/ResourceRequest.h:
+
 2011-06-07  Emil A Eklund  <eae@chromium.org>
 
         Reviewed by Eric Seidel.
